jena-shex/src/test/files/spec/negativeSyntax/shapename-true.shex
# keyword true as shape name
# source: turtle-syntax-bad-kw-04.ttl
true {
   <http://a.example/p1> .
}
